2018-08-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Collect user IDs and corresponding
	names. They are used as candidates when completing a user screen
	name. They are saved in "~/.twittering-mode-user-info.gz" in
	default and they will be automatically loaded when initializing
	global variables.
	(twittering-add-statuses-to-timeline-data): register user IDs
	found in new statuses.
	(twittering-user-id-db): new variable.
	(twittering-user-id-db-file): new customizable variable.
	(twittering-registered-user-screen-names): new function.
	(twittering-find-user): new function.
	(twittering-register-user-id): new function.
	(twittering-register-user-id-from-status): new function.
	(twittering-save-user-id-db): new function.
	(twittering-load-user-id-db): new function.
	(twittering-register-account-info): register the user ID and the
	screen name in the given account information.
	(twittering-initialize-global-variables-if-necessary): load user
	IDs and add the function `twittering-save-user-id-db' to the
	`kill-emacs-hook' hook.
	(twittering-read-username-with-completion): use registered user
	IDs as candidates for completion.
	(twittering-read-timeline-spec-with-completion): likewise.

	* twittering-mode.el: Add a function to convert a timestamp string
	representing a UNIX epoch time into a Emacs time object.
	(twittering-epoch-timestamp-to-time): new function.
	(twittering-snowflake-epoch-time): use the new function.

	* twittering-mode.el: Support a new timeline spec
	":direct_message_events".
	(twittering-http-get-default-sentinel): use a new function for
	reading direct message events timeline.
	(twittering-timeline-spec-to-string): add a new timeline spec
	":direct_message_events".
	(twittering-extract-timeline-spec): likewise.
	(twittering-timeline-spec-primary-p): likewise.
	(twittering-timeline-spec-is-direct-message-events-p): new
	function.
	(twittering-call-api-with-account-in-api1.1): likewise.